src/styles/components/_codeSnippet.scss
.codeSnippet {
  @extend %full-flex;

  position: relative;
  z-index: 1;
  width: calc(100vw - 36px);
  overflow: auto;

  @include desktop-view {
    width: 100%;
  }

  pre {
    width: 100%;
    @include mobile-view {
      padding-top: 40px !important;
    }
    @include desktop-view {
      padding-top: 30px !important;
    }
  }

  code[class*='language'] {
    @include mobile-view {
      padding-right: 30px !important;
      float: left;
      font-size: 0.7em !important;
    }
    @include desktop-view {
      font-size: 12px !important;
    }
  }

  .linenumber {
    &:last-of-type {
      display: none !important;
    }
  }

  span {
    line-height: 1.2em;
    @include desktop-view {
      line-height: 1.6em;
    }
  }

  &--inline {
    display: inline-block;
    position: relative;
    z-index: 2;
    margin: 0 1px;
    padding: 3px;
    color: $white;
    font-family: $code-font-family;
    font-size: 0.9em;
    letter-spacing: -0.005em;
    line-height: 1.2em;
    vertical-align: baseline;
    @include desktop-view {
      padding: 4px;
      font-size: 0.8em;
    }

    &::before {
      content: '';
      position: absolute;
      z-index: -1;
      top: 50%;
      left: 50%;
      width: calc(100% - 2px);
      height: calc(100% - 3px);
      transform: translateX(-50%) translateY(-50%);
      border-radius: 3px;
      background-color: rgba($code-background, $opacity-40);
    }
  }

  &-button {
    position: absolute;
    z-index: 2;
    top: 15px;
    right: 10px;
    color: rgba($white, $opacity-50);
    cursor: pointer;
  }
}

